Created GPRelevance to test input relevance.

--- a/train_interpretation.ipynb
+++ b/train_interpretation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3610,14 +3610,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "499\n\n============== Kernel: rbf ====================\n\n----------- Testing on X_test ------------\n\n---- Threshold: 1.000000 ----\nLoans approved:    375/500\nLoans given:       $ 3903.2\nPayments received: $ 4446.2\n\nProfits:           $ 543.0\nProfit Percentage: 13.9%\n\n---- Threshold: 0.983862 ----\nLoans approved:    387/500\nLoans given:       $ 4085.2\nPayments received: $ 4670.4\n\nProfits:           $ 585.2\nProfit Percentage: 14.3%\n0.983862380612\n"
+      "499\n\n============== Kernel: rbf ====================\n\n----------- Testing on X_test ------------\n\n---- Threshold: 1.000000 ----\nLoans approved:    375/500\nLoans given:       $ 3903.2\nPayments received: $ 4446.2\n\nProfits:           $ 543.0\nProfit Percentage: 13.9%\n\n---- Threshold: 1.158622 ----\nLoans approved:    161/500\nLoans given:       $ 1000.2\nPayments received: $ 1134.1\n\nProfits:           $ 133.9\nProfit Percentage: 13.4%\n1.15862234903\n"
      ]
     }
    ],
    "source": [
     "kernel = GPy.kern.RBF(input_dim=input_dim, variance=1., lengthscale=1.)\n",
     "test_kernel_relevance(kernel, X_train, y_train_scaled, X_val, y_val,\n",
-    "            X_test, y_test, X_scaler, y_scaler, top_size=100, optimize_for=\"profits\")"
+    "            X_test, y_test, X_scaler, y_scaler, top_size=100, optimize_for=\"profit_percentage\")"
    ]
   },
   {
