Added test simulation for bayesian optimization

--- a/train.ipynb
+++ b/train.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
     "LOANS_PER_MONTH = 100\n",
     "CONF_QUANTILE   = (40,100)\n",
     "\n",
-    "perf_gp = simulate_N_time_periods(gp_model, X_val, y_val, X_scaler, y_scaler, \n",
+    "perf_gp = simulate_N_time_periods(gp_model, X_val, y_val, X_scaler, y_scaler,\n",
     "                                  threshold=THRESHOLD, num_periods=NUM_PERIODS, fund_given=FUND_GIVEN, \n",
     "                                  num_months=NUM_MONTHS,incoming_loans_per_time_period=LOANS_PER_MONTH,\n",
     "                                  conf_quantile=CONF_QUANTILE, optimize_for=\"TODO\", \n",
@@ -165,9 +165,16 @@
     "                                      conf_quantile=None, optimize_for=\"TODO\", \n",
     "                                      version=\"threshold_only\", model_type=\"others\", seed=SEED)\n",
     "\n",
+    "perf_bayes_opt = simulate_N_time_periods(gp_model, X_val, y_val, X_scaler, y_scaler,\n",
+    "                                         threshold=THRESHOLD, num_periods=NUM_PERIODS, fund_given=FUND_GIVEN, \n",
+    "                                         num_months=NUM_MONTHS,incoming_loans_per_time_period=LOANS_PER_MONTH,\n",
+    "                                         conf_quantile=CONF_QUANTILE, optimize_for=\"TODO\", \n",
+    "                                         version=\"bayesian_optimization\", kappa=1., model_type=\"gp\", seed=SEED)\n",
+    "\n",
     "print(\"Mean Total Profits:\")\n",
     "print(np.mean(np.sum(perf_gp[:,:,0], axis=1)))\n",
-    "print(np.mean(np.sum(perf_others[:,:,0], axis=1)))"
+    "print(np.mean(np.sum(perf_others[:,:,0], axis=1)))\n",
+    "print(np.mean(np.sum(perf_bayes_opt[:,:,0], axis=1)))"
    ]
   },
   {
