more experimentation with active learning

--- a/active_learning.ipynb
+++ b/active_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train: (1000, 38), y_train: (1000,)\n",
+      "X_train: (23819, 38), y_train: (23819,)\n",
       "X_val: (5955, 38), y_val: (5955,)\n",
       "X_test: (500, 38), y_test: (500,)\n"
      ]
@@ -56,7 +56,7 @@
     "\n",
     "# Temporarily use subset of data to debug faster\n",
     "# TODO: Remove\n",
-    "X_train, y_train = X_train[:1000,:], y_train[:1000]\n",
+    "# X_train, y_train = X_train[:2000,:], y_train[:2000]\n",
     "# X_val, y_val     = X_val[:500,:], y_val[:500]\n",
     "X_test, y_test   = X_test[:500,:], y_test[:500]\n",
     "\n",
@@ -67,6 +67,7 @@
     "X_val_scaled = X_scaler.transform(X_val)\n",
     "X_test_scaled = X_scaler.transform(X_test)\n",
     "\n",
+    "\n",
     "print(\"X_train: %s, y_train: %s\" % (str(X_train.shape), str(y_train.shape)))\n",
     "print(\"X_val: %s, y_val: %s\" % (str(X_val.shape), str(y_val.shape)))\n",
     "print(\"X_test: %s, y_test: %s\" % (str(X_test.shape), str(y_test.shape)))"
@@ -74,22 +75,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<paramz.optimization.optimization.opt_lbfgsb at 0x7f486a531320>"
+       "<paramz.optimization.optimization.opt_lbfgsb at 0x7fd1462b5f60>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from active_learning import *\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%reload_ext autoreload\n",
     "\n",
     "# Normalize\n",
     "y_scaler = MinMaxScaler()\n",
@@ -99,23 +112,33 @@
     "kernel = GPy.kern.RBF(input_dim=X_train.shape[1], variance=1., lengthscale=1.)\n",
     "\n",
     "# normal GP\n",
-    "gp_normal = GPy.models.GPRegression(X_train_scaled, y_train_scaled, kernel)\n",
-    "gp_normal.optimize()\n",
+    "# gp_model = GPy.models.SparseGPRegression(X_train_scaled, y_train_scaled, kernel)\n",
+    "# gp_model.optimize()\n",
     "\n",
-    "# # sampled using maximum entropy sampling\n",
-    "# X_sampled, y_sampled = maximum_entropy_sampling(X_train_scaled, y_train_scaled, 0.1)\n",
-    "# gp_mes = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
-    "# gp_mes.optimize()\n",
+    "# maximum entropy sampling\n",
+    "X_sampled, y_sampled = maximum_entropy_sampling(X_train_scaled, y_train_scaled, 100)\n",
+    "gp_model = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
+    "gp_model.optimize()\n",
     "\n",
-    "# # sampled using random sampling\n",
-    "# X_sampled, y_sampled = random_sampling(X_train_scaled, y_train_scaled, 0.1)\n",
-    "# gp_rand = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
-    "# gp_rand.optimize()"
+    "# DARE sampling\n",
+    "# X_sampled, y_sampled = DARE_sampling(X_train_scaled, y_train_scaled, 100, X_scaler) \n",
+    "# gp_DARE = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
+    "# gp_DARE.optimize()\n",
+    "\n",
+    "# sum of mean squared error sampling\n",
+    "# X_sampled, y_sampled = MSE_sampling(X_train_scaled, y_train_scaled, 100)\n",
+    "# gp_model = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
+    "# gp_model.optimize()\n",
+    "\n",
+    "# random sampling\n",
+    "# X_sampled, y_sampled = random_sampling(X_train_scaled, y_train_scaled, 100)\n",
+    "# gp_model = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
+    "# gp_model.optimize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +150,7 @@
       "Simulating period 0...\n",
       "Simulating period 10...\n",
       "Mean Total Profits:\n",
-      "0.0\n"
+      "426220.51335\n"
      ]
     }
    ],
@@ -147,21 +170,14 @@
     "CONF_QUANTILE   = (40,100)\n",
     "\n",
     "\n",
-    "perf_gp_mes = simulate_N_time_periods(gp_normal, X_val, y_val, X_scaler, y_scaler, \n",
+    "perf_gp = simulate_N_time_periods(gp_model, X_val_scaled, y_val, X_scaler, y_scaler, \n",
     "                                  threshold=THRESHOLD, num_periods=NUM_PERIODS, fund_given=FUND_GIVEN, \n",
     "                                  num_months=NUM_MONTHS,incoming_loans_per_time_period=LOANS_PER_MONTH,\n",
     "                                  conf_quantile=CONF_QUANTILE, optimize_for=\"TODO\", \n",
-    "                                  version=\"expected_total_payment_and_variance\", model_type=\"gp\", seed=SEED)\n",
-    "\n",
-    "# perf_gp_rand = simulate_N_time_periods(gp_rand, X_val, y_val, X_scaler, y_scaler, \n",
-    "#                                   threshold=THRESHOLD, num_periods=NUM_PERIODS, fund_given=FUND_GIVEN, \n",
-    "#                                   num_months=NUM_MONTHS,incoming_loans_per_time_period=LOANS_PER_MONTH,\n",
-    "#                                   conf_quantile=CONF_QUANTILE, optimize_for=\"TODO\", \n",
-    "#                                   version=\"expected_total_payment_and_variance\", model_type=\"gp\", seed=SEED)\n",
+    "                                  version=\"loan_amount_and_variance\", model_type=\"gp\", seed=SEED)\n",
     "\n",
     "print(\"Mean Total Profits:\")\n",
-    "print(np.mean(np.sum(perf_gp_mes[:,:,0], axis=1)))\n",
-    "# print(np.mean(np.sum(perf_gp_rand[:,:,0], axis=1)))"
+    "print(np.mean(np.sum(perf_gp[:,:,0], axis=1)))\n"
    ]
   },
   {
